add current semester endpoint
